# PFB-LOLA-seq

./: .gitignore  README.md  callingpeaksmd.md  define_distance.py  format_closest_overlap.py  notes.md  polish_bed.py  pyproject.toml  resources.txt  snRNAseq_analysis.md  snRNAseq_atac_analysis.md
pfb_lola_seq/atac-seq/: atac-LOLA-with-mudata.ipynb  atac-LOLA.ipynb  frags_to_coverage.txt  presentation.md
pfb_lola_seq/generatingfiles/: Peak_calling.py  countlengthhists.ipynb
